# wwm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  run.sh  wwm.desktop  xinitrc
src/: client.rs  command.rs  config.rs  keyboard.rs  layouts.rs  main.rs  monitor.rs  mouse.rs  theme.rs  util.rs  workspace.rs  wwm.rs
src/keyboard/: keybind.rs  mod.rs
wwm-bar/: Cargo.toml
wwm-bar/src/: lib.rs  status_module.rs  util.rs  visual.rs
wwm-bar/src/font/: loader.rs  mod.rs  render_string.rs
wwm-core/: Cargo.toml
wwm-core/src/: lib.rs  text.rs  util.rs
wwm-core/src/util/: bar.rs  cmd.rs  color.rs  mod.rs  primitives.rs
