[package]
name = "wwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallmap = "1.4.1"
thiserror = "1.0.40"
x11rb = { version = "0.11.1", features = ["xkb", "randr", "allow-unsafe-code", "cursor", "libc"] }
xcb = "1.2.1"
xkbcommon = { version = "0.5.0", features = ["x11"] }
wwm-bar = { path = "./wwm-bar" }
lazy_static = "1.4.0"
